--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,32 @@
+## #############################################################
+## Server Configuration
+## #############################################################
 quarkus.http.port=8081
+
+## #############################################################
+## Logging Configuration
+## #############################################################
+quarkus.log.category."com.quarkus.developers.services".level=DEBUG
+
+## #############################################################
+## Artemis JMS Configuration
+## #############################################################
 quarkus.artemis.url=tcp://localhost:61616
 quarkus.artemis.username=artemis
 quarkus.artemis.password=artemis
 
+## #############################################################
+## MySql Configuration
+## #############################################################
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=developer
+quarkus.datasource.password=developer
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sampledb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+quarkus.datasource.jdbc.max-size=8
+quarkus.hibernate-orm.database.generation=drop-and-create
+hibernate-orm.database.generation.log.sql=true
 
-monitor.listen.type=jms
+## #############################################################
+## Custom Configuration
+## #############################################################
+monitor.listener.type=jms
