--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
+## #############################################################
+## Artemis JMS Configuration
+## #############################################################
 quarkus.artemis.url=tcp://localhost:61616
 quarkus.artemis.username=administrator
 quarkus.artemis.password=administrator
 
-quarkus.log.category."com.quarkus.developers.services".level=DEBUG
+## #############################################################
+## MySql Configuration
+## #############################################################
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=developer
+quarkus.datasource.password=developer
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sampledb
+quarkus.datasource.jdbc.max-size=8
+quarkus.hibernate-orm.database.generation=create
 
+## #############################################################
+## Custom Configuration
+## #############################################################
 monitor.receiver.type=jms
