--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,16 +4,37 @@
 quarkus.http.port=8081
 
 ## #############################################################
-## Logging Configuration
+## Quarkus Configuration
 ## #############################################################
+quarkus.kubernetes-client.trust-certs=false
+#quarkus.log.category."io.quarkus.arc.processor".level=DEBUG
 quarkus.log.category."com.quarkus.developers.services".level=DEBUG
 
 ## #############################################################
-## Artemis JMS Configuration
+## SmallRye AMQP Configuration
+## #############################################################
+amqp-host=localhost
+amqp-port=61616
+amqp-username=artemis
+amqp-password=artemis
+
+mp.messaging.incoming.amqpAddress.connector=smallrye-amqp
+
+## #############################################################
+## SmallRye JMS Configuration
 ## #############################################################
 quarkus.artemis.url=tcp://localhost:61616
 quarkus.artemis.username=artemis
 quarkus.artemis.password=artemis
+
+mp.messaging.incoming.jmsQueue.connector=smallrye-jms
+
+## #############################################################
+## Kafka AMQP Configuration
+## #############################################################
+kafka.bootstrap.servers=localhost:9092
+
+mp.messaging.incoming.kafkaAddress.connector=smallrye-kafka
 
 ## #############################################################
 ## MySql Configuration
@@ -27,6 +48,14 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 hibernate-orm.database.generation.log.sql=true
 
 ## #############################################################
+## MongoDB Configuration
+## #############################################################
+quarkus.mongodb.connection-string = mongodb://localhost:27017
+quarkus.mongodb.database = cluster_resources
+
+## #############################################################
 ## Custom Configuration
 ## #############################################################
-monitor.listener.type=jms
+messaging.consume-from.amqp=false
+messaging.consume-from.jms=true
+messaging.consume-from.kafka=false
