--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,40 @@
 ## #############################################################
-## Artemis JMS Configuration
+## Server Configuration
+## #############################################################
+quarkus.http.port=8081
+
+## #############################################################
+## Quarkus Configuration
+## #############################################################
+quarkus.kubernetes-client.trust-certs=false
+#quarkus.log.category."io.quarkus.arc.processor".level=DEBUG
+quarkus.log.category."com.quarkus.developers.services".level=INFO
+
+## #############################################################
+## SmallRye AMQP Configuration
+## #############################################################
+amqp-host=localhost
+amqp-port=61616
+amqp-username=artemis
+amqp-password=artemis
+
+mp.messaging.incoming.amqpAddress.connector=smallrye-amqp
+
+## #############################################################
+## SmallRye JMS Configuration
 ## #############################################################
 quarkus.artemis.url=tcp://localhost:61616
 quarkus.artemis.username=administrator
 quarkus.artemis.password=administrator
+
+mp.messaging.incoming.jmsQueue.connector=smallrye-jms
+
+## #############################################################
+## Kafka AMQP Configuration
+## #############################################################
+kafka.bootstrap.servers=localhost:9092
+
+mp.messaging.incoming.kafkaAddress.connector=smallrye-kafka
 
 ## #############################################################
 ## MySql Configuration
@@ -11,11 +42,20 @@ quarkus.artemis.password=administrator
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=developer
 quarkus.datasource.password=developer
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sampledb
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sampledb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 quarkus.datasource.jdbc.max-size=8
 quarkus.hibernate-orm.database.generation=create
+hibernate-orm.database.generation.log.sql=false
+
+## #############################################################
+## MongoDB Configuration
+## #############################################################
+quarkus.mongodb.connection-string = mongodb://localhost:27017
+quarkus.mongodb.database = cluster_resources
 
 ## #############################################################
 ## Custom Configuration
 ## #############################################################
-monitor.receiver.type=jms
+messaging.consume-from.amqp=false
+messaging.consume-from.jms=false
+messaging.consume-from.kafka=false
