--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
       <artifactId>json-flattener</artifactId>
       <version>0.16.6</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-properties</artifactId>
+      <version>2.16.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
