--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,7 +6,6 @@ quarkus.http.port=8081
 ## #############################################################
 ## Quarkus Configuration
 ## #############################################################
-quarkus.kubernetes-client.trust-certs=false
 #quarkus.log.category."io.quarkus.arc.processor".level=DEBUG
 quarkus.log.category."com.quarkus.developers.services".level=DEBUG
 
@@ -40,9 +39,9 @@ mp.messaging.incoming.kafkaAddress.connector=smallrye-kafka
 ## MySql Configuration
 ## #############################################################
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=developer
-quarkus.datasource.password=developer
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sampledb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+quarkus.datasource.username=cluster_resources_user
+quarkus.datasource.password=cluster_resources_pwd
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/cluster_resources?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 quarkus.datasource.jdbc.max-size=8
 quarkus.hibernate-orm.database.generation=drop-and-create
 hibernate-orm.database.generation.log.sql=true
